# unvanquished-tray-browser

./: .gitignore  COPYING.txt  README.md  make_icons.py  pyproject.toml
.github/workflows/: build-and-publish.yml
package/: net.unvanquished.unvtray.desktop
unvtray/: __main__.py  common.py  launch.py  ping.py  query.py  server.py  servers.py  tray.py
